# bilby_nr

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: pages.yml  test.yml
bilby_nr/: bilby_pipe.py  conversion.py  match.py  source.py  utils.py
bilby_nr/interp/: NatureAstronomy.XXX.YYY.2025.SEOB.txt  NatureAstronomy.XXX.YYY.2025.TPHM.txt  NatureAstronomy.XXX.YYY.2025.XPHMST.txt  __init__.py  pade_pade.py
bilby_nr/tests/: test_bilby_pipe.py  test_config.ini  test_config_with_additional_arguments.ini  test_conversion.py  test_match.py  test_source.py  test_utils.py
docs/: citing.rst  conf.py  index.rst  installation.rst
examples/: additional_arguments.ini
