[build-system]
requires = [
	"setuptools>=61.0",
	"setuptools_scm[toml]>=3.4.3",
	"wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "bilby_nr"
version = "0.1.0"
authors = [
	{ name = "Charlie Hoy", email = "charlie.hoy@port.ac.uk" }
]
description = "Python package to extend the functionality of `bilby` to incorporate model accuracy into gravitational wave Bayesian analyses"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
        "numpy",
	"bilby",
        "bilby_pipe @ git+https://git.ligo.org/charlie.hoy/bilby_pipe.git@input_class"
]

[project.optional-dependencies]
seobnr = [
        "pyseobnr"
]
test = [
        "coverage-badge",
        "pytest",
        "pytest-cov"
]

[tool.setuptools.package-data]
interpolants = ["bilby_nr/interp/NatureAstronomy.XXX.YYY.2025.*.txt"]
test_configs = ["bilby_nr/tests/*.ini"]

[tool.setuptools]
packages = [
	"bilby_nr",
        "bilby_nr.interp",
        "bilby_nr.tests"
]
license-files = [
	"LICENSE.md",
]

[tool.setuptools_scm]

[tool.coverage.run]
source = [
	"./bilby_nr"
]
omit = [
	"bilby_nr/tests/*"
]

